--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root{
+  --mixed: linear-gradient(to bottom right, #ff00cc, #3333cc);
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,53 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.card{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 150px;
+  padding: 20px;
+  border-radius:20px;
+  box-shadow: 0 0 70px 40px rgba(184, 84, 149, 0.2)  
+}
+
+.card input{
+  width: 80%;
+  height: 40px;
+  margin-top: 10px;
+  font-weight: 800;
+  font-size: 20px;
+  padding-left: 15px;
+  color: rgb(40, 36, 36);
+  border: 3px solid rgb(36, 35, 35);
+}
+.card input:focus{
+  outline: none;
+}
+.btns{
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+  justify-content: center;
+  margin-top: 15px;
+}
+.btns button{
+  width: 40px;
+  height: 40px;
+  background-color: rgb(40, 37, 37);
+  color: rgb(214, 214, 214);
+  font-size: large;
+  border-radius: 2px;
+  align-items: center ;
+  justify-content: center ;
+}
+.success {
+  color: blue; 
+}
+.error{
+  color: red;  
 }
